增加新的知识总结

--- a/01.MySQL数据库的理解.md
+++ b/01.MySQL数据库的理解.md
@@ -225,6 +225,8 @@ primary key (stuid)
 select column_name1, column_name2 
 from table_name
 where [offset m]
+
+select count(*) from 表名  查询有多少行
 ```
 
 **注解：**
